created 6 first levels and wired options menu

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,11 @@
 Animacja drwala na MainMenu++
 
-Scena opcji
+Scena opcji ++ 
+do rozwi¹zania - zapauzowanie sceny i powrót do gry!++
 
 Scena Mapy
 
-Opcja dotacji
+Opcja dotacji++
 
 Muzyka
 
