made few corrections to pause menu and clear function changed score for numbers of bricks left in play instead removed score scripts

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ scena mapy z poziomami do odblokowania
 Poprawiæ credits
 poprawic scene fina³ow¹
 poziomy
+sprawdzic palete barw dla kazdego poziomu itp
 
 // rys fabularny po wersji testowej:
 
