--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
-Ppzygotowa scrypt do odblokowywania poziomow i wiredUp ze scena
+Przygotowa scrypt do odblokowywania poziomow i wiredUp ze scena
+Dodaæ splashScreen LongEar
 Poprawiæ credits
-poprawic scene game over
-nak³adka potwierdzajaca exit
+gameover dodac kanapke jak bedzie gotowa
+nak³adka potwierdzajaca exit // moze
+Orze³ do gry
+
 
 // rys fabularny po wersji testowej:
 
