Created functioning eagle to shoot in final scene

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,8 @@ Dodaæ splashScreen LongEar
 Poprawiæ credits
 gameover dodac kanapke jak bedzie gotowa
 Orze³ do gry
-
+Icona do gry i grafika na GooglePLay
+Zrobiæ animacje do or³a jak jest trafiony i spadaj¹cej kanapki na koniec!!!!!!!
 
 // rys fabularny po wersji testowej:
 
